@@ -4,6 +4,7 @@ import com.alfasistemastecnologia.cafeteriaweb.api.assembleDTO.BebidaModelDisass
 import com.alfasistemastecnologia.cafeteriaweb.api.modelDTO.inputDTO.BebidaInputDTO;
 import com.alfasistemastecnologia.cafeteriaweb.domain.exception.BebidaNãoEncontradoException;
 import com.alfasistemastecnologia.cafeteriaweb.domain.exception.EntidadeEmUsoException;
+import com.alfasistemastecnologia.cafeteriaweb.domain.exception.NegocioException;
 import com.alfasistemastecnologia.cafeteriaweb.domain.exception.UsuarioNãoEncontradoException;
 import com.alfasistemastecnologia.cafeteriaweb.domain.model.*;
 import com.alfasistemastecnologia.cafeteriaweb.domain.repository.*;
@@ -24,13 +25,13 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
- * Serviço responsável por gerenciar bebidas (clássicas e personalizadas).
- * Contém lógica de verificação de ingredientes, persistência e exclusão segura.
+ * Serviço responsável por gerenciar usuarios.
+ * Contém lógica para salvar, atualizar, excluir e buscar usuarios com validações.
  */
 @Service
 public class UsuarioService {
 
-    private static final String MSG_USUARIO_EM_USO = "Bebida do código %d não pode ser removida, pois está em uso.";
+    private static final String MSG_USUARIO_EM_USO = "Usuário de código %d não pode ser removido, pois está em uso.";
 
     @Autowired
     private UsuarioRepository usuarioRepository;
@@ -38,61 +39,79 @@ public class UsuarioService {
     @Autowired
     private PasswordEncoder passwordEncoder;
 
-
     /**
-     * Salva uma bebida no banco de dados, associando corretamente os ingredientes,
-     * e verificando se ela corresponde a uma bebida clássica conhecida.
+     * Salva um novo usuario no banco, codificando a senha e validando unicidade do email.
      */
     @Transactional
     public Usuario salvar(@Valid Usuario usuario) {
+
+        // Verifica se o e-mail já está em uso
+        if (usuarioRepository.findByEmail(usuario.getEmail()).isPresent()) {
+            throw new NegocioException("E-mail já está em uso.");
+        }
+
+        // Garante que a senha foi informada
+        if (usuario.getSenha() == null || usuario.getSenha().isBlank()) {
+            throw new NegocioException("Senha obrigatória no cadastro.");
+        }
+
+        // Bloqueia envio de senha já criptografada
+        if (usuario.getSenha().startsWith("$2a$") || usuario.getSenha().startsWith("$2b$")) {
+            throw new NegocioException("Senha não pode estar criptografada. Envie em texto puro.");
+        }
+
+        // Codifica a senha antes de persistir
         usuario.setSenha(passwordEncoder.encode(usuario.getSenha()));
+
         return usuarioRepository.save(usuario);
     }
 
+    /**
+     * Atualiza um usuario existente com validações de unicidade e codificação de senha.
+     */
     @Transactional
-    public Usuario atualizar(Long id, @Valid Usuario usuarioAtualizado) {
+    public Usuario atualizar(Long id, Usuario usuarioAtualizado) {
         Usuario existente = usuarioRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado"));
 
-        // Atualiza os dados básicos
+        if (!usuarioAtualizado.getEmail().equals(existente.getEmail()) &&
+                usuarioRepository.findByEmail(usuarioAtualizado.getEmail()).isPresent()) {
+            throw new NegocioException("E-mail já está em uso.");
+        }
+
         existente.setNome(usuarioAtualizado.getNome());
         existente.setEmail(usuarioAtualizado.getEmail());
 
-        // Atualiza a senha SOMENTE se ela tiver sido alterada
         String novaSenha = usuarioAtualizado.getSenha();
-
-        if (novaSenha != null && !novaSenha.isBlank()) {
-            // Se a nova senha estiver diferente da atual (desconsiderando hash)
-            if (!passwordEncoder.matches(novaSenha, existente.getSenha())) {
-                existente.setSenha(passwordEncoder.encode(novaSenha));
+        if (novaSenha != null && !novaSenha.trim().isEmpty()) {
+            if (novaSenha.startsWith("$2a$") || novaSenha.startsWith("$2b$")) {
+                throw new NegocioException("Senha já criptografada. Envie em texto puro.");
             }
+            existente.setSenha(passwordEncoder.encode(novaSenha));
         }
 
         return usuarioRepository.save(existente);
     }
 
     /**
-     * Exclui uma bebida pelo ID. Lança exceções customizadas se não encontrada ou se estiver em uso.
+     * Exclui um usuario pelo ID, tratando erros caso não exista ou esteja em uso.
      */
     @Transactional
     public void excluir(Long usuarioId) {
         try {
             usuarioRepository.deleteById(usuarioId);
         } catch (EmptyResultDataAccessException e) {
-            // Se o ID não existir
-            throw new BebidaNãoEncontradoException(usuarioId);
+            throw new UsuarioNãoEncontradoException(usuarioId);
         } catch (DataIntegrityViolationException e) {
-            // Se a bebida estiver sendo usada em outra tabela (chave estrangeira, etc)
             throw new EntidadeEmUsoException(String.format(MSG_USUARIO_EM_USO, usuarioId));
         }
     }
 
     /**
-     * Retorna uma bebida pelo ID ou lança exceção se não existir.
+     * Busca um usuario pelo ID ou lança exceção caso não seja encontrado.
      */
     public Usuario buscarOuFalhar(Long usuarioId) {
         return usuarioRepository.findById(usuarioId)
                 .orElseThrow(() -> new UsuarioNãoEncontradoException(usuarioId));
     }
-
 }
